@@ -1,8 +1,22 @@
 # TipCalculator
+###### Jawad Haider
+## Instruction
+Design and Implement the Tip Calculator app from Chapter 12, section 12.5. The one that we have implemented during the class.
 
+Note: The purpose of this assignment is to introduce the student to the Workshop activity of the Moodle LMS.
 
 A class activity to follow the steps and learn basics of SceneBuilder and JavaFx library. The TipCalulator is used to calculate ordinary tip of upto 30% for a given amount. 
 The users can't change the text fields for Tip and Total.
-GUI App Screen Shots:
+
+## Software Requirements:
+1. Scene Builder installation
+[Official site](https://gluonhq.com/products/scene-builder/) to download Scene Builder.
+
+2. [Official site](https://openjfx.io/) of JavaFX where you can find official documentation as well as download links.
+Step-by-step [instructions] (https://openjfx.io/openjfx-docs/) on how to install and run JavaFX applications.
+
+=> --module-path ${PATH_TO_JAVAFX} --add-modules javafx.controls,javafx.fxml
+
+## GUI App Screen Shots:
 ![](images/Screenshot%20from%202020-12-15%2004-54-35.png)
 ![](images/Screenshot%20from%202020-12-15%2004-54-43.png)
